# breast-cancer_prediction_ml

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
experimental_notebooks/: experimental.ipynb
modules/: classification_metrics.py  crossval.py  dataexplore.py
scripts/: comparing_models.py  experimental.py  final_training_and_eval.py  gridsearch_hyperparameter_tuning.py  training_and_eval.py
src/modules/: classification_metrics.py  crossval.py  data_loading_preprocessing.py  gridsearch_hyperparameter_tuning.py  loader.py
